# Event0_TTS

./: .gitignore  Cargo.toml  build.sh  default.nix  insert-comments.py  tts_shell.sh
ITS_TTS/: ITS_TTS Analysis.txt  cmudict.0.7a.trimmed.txt  list.py  sort.py
src/: main.rs  parser.rs  wordlist.rs
src/parser/: wordmap_linux.rs  wordmap_numbers.rs  wordmap_punctuation.rs
