[package]
name = "event0_tts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.1", features = ["macros"] }
rand = "0.8.5"
rodio = "0.16.0"
rust-embed = "6.4.2"
text_io = "0.1.12"

[profile.release]
# Remove symbols from the binary
strip = true
# Instruct to optimise for size rather than speed
#opt-level = "z"
# Enable Link Time Optimisation
lto = true
# Disable parallel code generation to allow for optimisations
codegen-units = 1
# Disable traceback unwinding
panic = "abort"
